ChoiceActivity correct behavior on device rotation